--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,15 @@ jobs:
     docker:
       - image: rocker/verse:latest
     steps:
+      - setup_remote_docker
       - checkout
+      - restore_cache:
+          keys:
+            - R-{{ checksum "bootstrap.R" }}
+            - R- # used if checksum fails
       - run: ./bootstrap
+      - save_cache:
+          key: R-{{ checksum "bootstrap.R" }}
+          paths:
+            - packages
       - run: ./test
