--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,18 @@ jobs:
     docker:
       - image: rocker/verse:latest
     steps:
-      - setup_remote_docker
+        # Allows us to issue docker commands from within the build container
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+
       - checkout
       - restore_cache:
           keys:
