--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
         # Allows us to issue docker commands from within the build container
       - setup_remote_docker:
           docker_layer_caching: true
-      - run: apt-get install wget
+      - run: apt-get update && apt-get install wget -y
       - run:
           name: Install Docker client
           command: |
