--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,7 @@ jobs:
     docker:
       - image: rocker/verse:latest
     steps:
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="18.06.1-ce"
-            wget -O /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-
+      - run: ./install_geckodriver.sh
       - checkout
       - restore_cache:
           keys:
