Delay after typing and screenshots

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,3 +18,5 @@ jobs:
           paths:
             - packages
       - run: ./test
+      - store_artifacts:
+          path: selenium_screenshots
