add extra dev bootstrap to circleci build steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
             - R-{{ checksum "bootstrap.R" }}
             - R- # used if checksum fails
       - run: ./bootstrap
+      - run: ./bootstrap-dev.R
       - save_cache:
           key: R-{{ checksum "bootstrap.R" }}
           paths:
