--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ git:
   submodules:
     false
 before_install:
+  - git config --global credential.helper cache
   - echo -e https://littledice:$GITHUB_PAT@github.com >~/.git-credentials
   - git submodule update --init --recursive
 r_github_packages:
