--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ git:
   submodules:
     false
 before_install:
-  - echo $github_deploy_key | sed -e 's/^"//' -e 's/"$//' > ~/.ssh/github_deploy_key && chmod 400 ~/.ssh/github_deploy_key
-  - GIT_SSH_COMMAND="ssh -i ~/.ssh/github_deploy_key" git submodule update --init --recursive
+  - git clone https://$github_pat@github.com/mrc-ide/shiny90_sample_files sample_files
 r_github_packages:
   - mrc-ide/first90
   - andrewsali/shinycssloaders
