--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
   - ./scripts/bootstrap
   - ./scripts/bootstrap-dev.R
-  - ./scripts/install_geckodriver.sh
+  - sudo ./scripts/install_geckodriver.sh
 script: ./scripts/test
 cache:
   directories:
