--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,17 @@
 
 language: R
 sudo: required
+addons:
+  firefox:
+    latest
 git:
   submodules:
     false
 before_install:
   - git clone https://$github_pat@github.com/mrc-ide/shiny90_sample_files sample_files
   - echo $github_pat > github_token
+  - export $(dbus-launch)
 install:
-  - sudo apt-get update && sudo apt-get install iceweasel -y
   - ./scripts/bootstrap
   - ./scripts/bootstrap-dev.R
   - sudo ./scripts/install_geckodriver.sh
