--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ git:
     false
 before_install:
   - git clone https://$github_pat@github.com/mrc-ide/shiny90_sample_files sample_files
+  - cd sample_files && git checkout $(echo $(git submodule status) | cut -d' ' -f 1)
+  - cd ../
   - echo $github_pat > github_token
   - export $(dbus-launch)
 install:
