--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ git:
   submodules:
     false
 before_install:
+  - git submodule init
   - git clone https://$github_pat@github.com/mrc-ide/shiny90_sample_files sample_files
-  - cd sample_files && git checkout $(echo $(git submodule status) | cut -d' ' -f 1)
+  - cd sample_files && git checkout $(echo $(git ls-tree HEAD sample_files) | cut -d' ' -f 1)
   - cd ../
   - echo $github_pat > github_token
   - export $(dbus-launch)
