--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ git:
     false
 before_install:
   - git submodule init
+  - export $submodule_commit=$(echo $(git ls-tree HEAD sample_files) | cut -d' ' -f 1))
   - git clone https://$github_pat@github.com/mrc-ide/shiny90_sample_files sample_files
-  - cd sample_files && git checkout $(echo $(git ls-tree HEAD sample_files) | cut -d' ' -f 1)
+  - cd sample_files && git checkout $submodule_commit
   - cd ../
   - echo $github_pat > github_token
   - export $(dbus-launch)
