--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ git:
     false
 before_install:
   - git submodule init
-  - export $submodule_commit=$(echo $(git ls-tree HEAD sample_files) | cut -d' ' -f 1))
+  - export submodule_commit=$(echo $(git ls-tree HEAD sample_files) | cut -d' ' -f 3)
   - git clone https://$github_pat@github.com/mrc-ide/shiny90_sample_files sample_files
   - cd sample_files && git checkout $submodule_commit
   - cd ../
