--- a/provision.yml
+++ b/provision.yml
@@ -1,7 +1,6 @@
 packages:
   - tidyr
   - numDeriv
-  - shiny
   - shinyjs
   - glue
   - devtools
@@ -18,3 +17,4 @@ packages:
 package_sources:
   github:
   - mrc-ide/first90release
+  - rstudio/shiny
