--- a/provision.yml
+++ b/provision.yml
@@ -16,6 +16,6 @@ packages:
   - zip
 package_sources:
   github:
-  - mrc-ide/first90release@2020update
+  - mrc-ide/first90release@v1.3.2
   - rstudio/shiny
 
