get github action working

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,11 +9,29 @@ jobs:
         with:
           token:  ${{ secrets.CI_TOKEN }}
           submodules: true
-      - name: Prepare Firefox
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+      - name: Install libcurl
+        run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev
+      - name: Install Firefox
         uses: browser-actions/setup-firefox@latest
       - name: Install Geckodriver
-        run: ./scripts/install_geckodriver.sh
+        uses: browser-actions/setup-geckodriver@latest
+      - name: Launch dbus
+        run: export $(dbus-launch)
       - name: Install dependencies
-        run: ./scripts/bootstrap.R & ./scripts/bootstrap-dev.R
+        env:
+          GITHUB_PAT: ${{ secrets.CI_TOKEN }}
+        run: rm .Renviron && ./scripts/bootstrap.R && ./scripts/bootstrap-dev.R
+      - name: Print R package info
+        run : R -e "installed.packages()[, 3]"
       - name: Test
         run: ./scripts/test
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: screenshots
+          path: selenium_screenshots
